Add persistent group conversation
